--- a/views/home.html
+++ b/views/home.html
@@ -41,55 +41,12 @@
             </div>
             <h1 class="mt-4">Courses</h1>
             <div class="row">
-                <div class="col-xl-3 col-md-6">
-                    <div class="card bg-primary text-white mb-4">
-                        <div class="d-flex">
-                            <div class="card-body">Math</div>
-                            <div class="card-body text-end">IT 313</div>
-                        </div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <a class="small text-white stretched-link" href="courseDetails.html">View
-                                Details</a>
-                            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                        </div>
-                    </div>
+                <div id="courseList" class="row">
+
                 </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="card bg-primary text-white mb-4">
-                        <div class="d-flex">
-                            <div class="card-body">Math</div>
-                            <div class="card-body text-end">IT 313</div>
-                        </div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <a class="small text-white stretched-link" href="#">View Details</a>
-                            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="card bg-primary text-white mb-4">
-                        <div class="d-flex">
-                            <div class="card-body">Math</div>
-                            <div class="card-body text-end">IT 313</div>
-                        </div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <a class="small text-white stretched-link" href="#">View Details</a>
-                            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="card bg-primary text-white mb-4">
-                        <div class="d-flex">
-                            <div class="card-body">Math</div>
-                            <div class="card-body text-end">IT 313</div>
-                        </div>
-                        <div class="card-footer d-flex align-items-center justify-content-between">
-                            <a class="small text-white stretched-link" href="#">View Details</a>
-                            <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                        </div>
-                    </div>
-                </div>
+
+
+
             </div>
 
 
@@ -99,17 +56,18 @@
         </div>
     </main>
 
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="/SchoolGradingSystem/js/scripts.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-    <script src="../js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="/SchoolGradingSystem/js/datatables-simple-demo.js"></script>
-    <script src="/js/jquery.spapp.min.js"></script>
-    <script src="../js/jquery.spapp.js"></script>
+    <script src="js/jquery.spapp.min.js"></script>
+    <script src="js/courses.js"></script>
+    <script src="js/jquery.spapp.js"></script>
 
 </body>
 
