--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,7 @@
                                     </div>
                                     
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="#register">Need an account? Sign up!</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="index.html">Login</a>
+                                                <a class="btn btn-primary" href="views/home.html">Login</a>
                                             </div>
                                         </form>
                                     </div>
