--- a/views/courses.html
+++ b/views/courses.html
@@ -8,6 +8,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
+
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+
+    <!-- DataTables JavaScript -->
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+
+
 </head>
 
 <body>
@@ -26,7 +35,7 @@
 
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel">Add Course</h5>
@@ -80,29 +89,19 @@
                     <h5 class="modal-title" id="courseModalLabel">Course Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body" id="courseModalContent">
-                   
+                <div class="modal-body" id="courseModalContent" style="margin-bottom: 100px;">
+
                     <h5>Course Title: <span id="courseTitle"></span></h5>
                     <p>Professor: <span id="courseProfessor"></span></p>
-                  
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Student ID</th>
-                                <th>Name</th>
-                                <th>Grade</th>
-                            </tr>
-                        </thead>
-                        <tbody id="enrolledStudentsTableBody">
-                          
-                        </tbody>
-                    </table>
+
                    
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#changeProfessorModal">Change Professor</button>
+
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-bs-toggle="modal"
+                        data-bs-target="#changeProfessorModal">Change Professor</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                   
+
                 </div>
             </div>
         </div>
