--- a/views/login.html
+++ b/views/login.html
@@ -72,7 +72,7 @@
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="views/home.html">Login</a>
+                                                <a class="btn btn-primary" href="#home">Login</a>
                                             </div>
                                         </form>
                                     </div>
