--- a/views/courses.html
+++ b/views/courses.html
@@ -8,21 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
-
     <!-- DataTables CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
-
-    <!-- DataTables JavaScript -->
-    <script type="text/javascript" charset="utf8"
-        src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
-
-
 </head>
 
 <body>
-
     <main>
-
         <div class="container-fluid px-4">
             <div class="d-flex justify-content-between">
                 <h1 class="mt-4">Courses</h1>
@@ -31,8 +22,13 @@
                     + Add course
                 </button>
             </div>
+            <div class="d-flex justify-content-end">
 
-
+                <button type="button" class="btn btn-primary mt-4" data-bs-toggle="modal"
+                    data-bs-target="#professorModal">
+                    + Add Professor
+                </button>
+            </div>
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -42,46 +38,97 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-
                             <form>
                                 <div class="mb-3">
-                                    <label for="courseName" class="form-label">Course Title</label>
-                                    <input type="text" class="form-control" id="coursName" placeholder="Title">
+                                    <label for="courseCode" class="form-label">Course Code</label>
+                                    <input type="text" class="form-control" id="courseCode" placeholder="Code"
+                                        name="courseCode">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <label for="courseName" class="form-label">Course Title</label>
+                                    <input type="text" class="form-control" id="courseName" placeholder="Title"
+                                        name="title">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="description" class="form-label">Description</label>
+                                    <textarea class="form-control" id="description" rows="3"
+                                        name="description"></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="courseECTS" class="form-label">Course ECTS</label>
                                     <input type="number" min="1" max="6" class="form-control" id="courseECTS"
                                         placeholder="ECTS">
                                 </div>
+                                <div class="mb-3">
+                                    <label for="professor_id" class="form-label">Professor</label>
+                                    <input type="number" class="form-control" id="professor_id" placeholder="professor"
+                                        name="professor_id">
+                                </div>
                             </form>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                            <button type="button" class="btn btn-primary" id="saveChangesBtn"
+                                data-bs-dismiss="modal">Save changes</button>
                         </div>
                     </div>
                 </div>
             </div>
 
 
+            <div class="modal fade" id="professorModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Add Professor</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="firstName" class="form-label">First Name</label>
+                                    <input type="text" class="form-control" id="firstName" placeholder="First Name"
+                                        name="firstName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="lastName" class="form-label">Last Name</label>
+                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name"
+                                        name="lastName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Email"
+                                        name="email" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="password" placeholder="Password"
+                                        name="password" required>
+                                </div>
+
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" id="saveChangesBtnProfessor"
+                                data-bs-dismiss="modal">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
             <ol class="breadcrumb mb-4">
                 <li class="breadcrumb-item"><a href="#home">Dashboard</a></li>
                 <li class="breadcrumb-item active">Courses</li>
             </ol>
-
             <div id="courseList" class="row">
-
             </div>
-
         </div>
     </main>
 
-    <!-- Modal -->
+
     <div class="modal fade model" id="courseModal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -90,30 +137,22 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="courseModalContent" style="margin-bottom: 100px;">
-
-                    <h5>Course Title: <span id="courseTitle"></span></h5>
-                    <p>Professor: <span id="courseProfessor"></span></p>
-
-                   
-
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-bs-toggle="modal"
-                        data-bs-target="#changeProfessorModal">Change Professor</button>
+                    <strong>Course ID:</strong> <span id="id"></span><br>
+                    <strong>Course Description:</strong> <span id="description2"></span><br>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-
                 </div>
             </div>
         </div>
     </div>
-
+    
     <!-- Bootstrap JS and jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Your custom JavaScript file -->
     <script src="js/courses.js"></script>
-
 </body>
 
 </html>
